additional tabs for palantir to support tasks and tickets